--- a/src/assets/locale/messages.es.xlf
+++ b/src/assets/locale/messages.es.xlf
@@ -844,9 +844,9 @@
           <context context-type="linenumber">19</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="9205201770196849058" datatype="html">
-        <source>Let&apos;s find the Guud in YOU.</source>
-        <target>Encontremos el GUUD en TI. ¡Vamos!</target>
+      <trans-unit id="2648639107378082937" datatype="html">
+        <source>Improve quality of life around the world.</source>
+        <target>Mejorar la calidad de vida en el mundo.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/views/aboutus/aboutus.component.html</context>
           <context context-type="linenumber">20</context>
