--- a/src/assets/locale/messages.xlf
+++ b/src/assets/locale/messages.xlf
@@ -791,8 +791,8 @@
           <context context-type="linenumber">19</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="9205201770196849058" datatype="html">
-        <source>Let&apos;s find the Guud in YOU.</source>
+      <trans-unit id="2648639107378082937" datatype="html">
+        <source>Improve quality of life around the world.</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/views/aboutus/aboutus.component.html</context>
           <context context-type="linenumber">20</context>
