--- a/src/assets/locale/messages.xlf
+++ b/src/assets/locale/messages.xlf
@@ -805,8 +805,8 @@
           <context context-type="linenumber">24</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="4284688756543354796" datatype="html">
-        <source>Passion, Innovation &amp; Humbleness</source>
+      <trans-unit id="6004883111397791127" datatype="html">
+        <source>Passion, Innovation &amp; Teamwork</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/views/aboutus/aboutus.component.html</context>
           <context context-type="linenumber">25</context>
