--- a/src/assets/locale/messages.es.xlf
+++ b/src/assets/locale/messages.es.xlf
@@ -844,9 +844,9 @@
           <context context-type="linenumber">19</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="2648639107378082937" datatype="html">
-        <source>Improve quality of life around the world.</source>
-        <target>Mejorar la calidad de vida en el mundo.</target>
+      <trans-unit id="9205201770196849058" datatype="html">
+        <source>Let&apos;s find the Guud in YOU.</source>
+        <target>Encontremos el GUUD en TI. ¡Vamos!</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/views/aboutus/aboutus.component.html</context>
           <context context-type="linenumber">20</context>
@@ -860,9 +860,9 @@
           <context context-type="linenumber">24</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="6004883111397791127" datatype="html">
-        <source>Passion, Innovation &amp; Teamwork</source>
-        <target>Pasión, Innovación &amp; Trabajo en equipo</target>
+      <trans-unit id="4284688756543354796" datatype="html">
+        <source>Passion, Innovation &amp; Humbleness</source>
+        <target>Pasión, Innovación &amp; Humildad</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/views/aboutus/aboutus.component.html</context>
           <context context-type="linenumber">25</context>
